RESOLVED FIXED155926
Rely on PlatformLayer to choose the TextureMapperPlatformLayer impl
https://bugs.webkit.org/show_bug.cgi?id=155926
Summary Rely on PlatformLayer to choose the TextureMapperPlatformLayer impl
Emanuele Aina
Reported 2016-03-26 18:12:22 PDT
Rely on PlatformLayer to choose the TextureMapperPlatformLayer impl
Attachments
Patch (5.49 KB, patch)
2016-03-26 18:13 PDT, Emanuele Aina
no flags
Patch (6.50 KB, patch)
2016-03-30 01:53 PDT, Emanuele Aina
no flags
Emanuele Aina
Comment 1 2016-03-26 18:13:38 PDT
WebKit Commit Bot
Comment 2 2016-03-26 18:15:56 PDT
Attachment 274991 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Catanzaro
Comment 3 2016-03-28 07:40:40 PDT
Comment on attachment 274991 [details] Patch Clever, I like it. You need to not break EFL, though. Seems it's not getting any typedef for PlatformLayer?
Philippe Normand
Comment 4 2016-03-29 00:13:11 PDT
Comment on attachment 274991 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=274991&action=review > Source/WebCore/ChangeLog:4 > + Need the bug URL (OOPS!). And the bugzilla URL should be mentioned here.
Emanuele Aina
Comment 5 2016-03-30 01:53:21 PDT
Zan Dobersek
Comment 6 2016-03-30 04:06:46 PDT
Comment on attachment 275187 [details] Patch LGTM. The Windows EWS error looks unrelated.
Philippe Normand
Comment 7 2016-04-04 02:01:27 PDT
Emanuele, if you want the commit-queue bot to land this, please let us know :)
Emanuele Aina
Comment 8 2016-04-04 02:19:27 PDT
Yes please! Should I request it in some particular way?
Philippe Normand
Comment 9 2016-04-04 02:30:34 PDT
Comment on attachment 275187 [details] Patch Next time you can set cq? so we know you want the commit-queue to land this.
WebKit Commit Bot
Comment 10 2016-04-04 03:21:31 PDT
Comment on attachment 275187 [details] Patch Clearing flags on attachment: 275187 Committed r199000: <http://trac.webkit.org/changeset/199000>
WebKit Commit Bot
Comment 11 2016-04-04 03:21:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.